--- a/Ai-MarTech.html
+++ b/Ai-MarTech.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - MarTech là gì?</title>
+    <title>MarTech Zone Blog - Xu hướng AI và Martech - Doanh nghiệp có nên đầu tư?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -35,7 +35,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Trang chủ</a></li>
 	          <li class="nav-item active"><a href="blog.html" class="nav-link">MarTech</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Chia sẻ</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
@@ -43,13 +43,13 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/image_2.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/AI-martech-zone.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">MarTech là gì | What is MarTech</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech là gì | What is MarTech<i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Xu hướng AI và Martech - Doanh nghiệp có nên đầu tư?</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Xu hướng AI và Martech - Doanh nghiệp có nên đầu tư?<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -59,31 +59,32 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
+            <p>AI đang dần len lỏi vào mọi ngành công nghiệp. Các doanh nghiệp rất mong muốn áp dụng nó nhờ vào khả năng tăng tốc quá trình, loại bỏ tắc nghẽn và tiết kiệm chi phí. Vậy doanh nghiệp cần làm gì để chuẩn bị?</p>
+   <p class="mb-5">
+              <img src="images/AI-martech-zone.jpg" alt="" class="img-fluid">
+            </p>         
 
-<p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
+<h2 class="mb-3 mt-5">1. AI là gì?</h2>
 
-<h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
-
-<p>Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
-<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+<p>AI (Artificial intelligence) là trí thông minh nhân tạo. Nó là sự mô phỏng các quá trình trí tuệ của con người bằng máy móc, đặc biệt là các hệ thống hệ máy tính. Các ứng dụng cụ thể của AI bao gồm xử lý các ngôn ngữ tự nhiên, nhận dạng giọng nói và thị giác, quản lý hệ thống… Từ việc giám sát các quy trình chính tại các công ty hàng đầu đến giúp doanh nghiệp nhỏ tăng cường nỗ lực tiếp thị, mọi tổ chức (lớn và nhỏ) giờ đây đều có quyền truy cập vào công nghệ hỗ trợ AI.</p>
+<p>Tuy nhiên, không chỉ người tiêu dùng có thể ngạc nhiên khi nghe điều đó. Một số doanh nghiệp cũng bắt đầu bị tụt lại phía sau do thiếu thông tin về sức mạnh của AI và nhiều cách có thể được sử dụng để tối ưu hóa nơi làm việc. Và thậm chí một số doanh nghiệp nhận thức được sức mạnh của nó cũng không thích nghi được.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+            <img src="images/2094084_5002_4.jpg" alt="" class="img-fluid">
             </p>
-            <h3 class="mb-3 mt-5">Chúng ta cùng tìm hiểu sâu thêm về MarTech</h3>
-            <p>Bạn có sử dụng MarTech không? Hầu như chắc chắn câu trả lời sẽ là có. Nếu bạn đã thực hiện bất kỳ phần nào trong hoạt động marketing của mình trong thế giới kỹ thuật số hiện nay, thì bạn là một phần của MarTech. Có thể là bạn đang sử dụng:</p>
-<p>Email marketing</p>
-<p>Customer relationship management (CRM) platforms</p>
-<p>Services to gauge customer satisfaction</p>
-<p>Website analytics</p>
-<p>Search or social media advertising</p>
-<p>Danh sách còn rất dài…</p>
-            <h2 class="mb-3 mt-5">Vậy, tại sao bạn sử dụng MarTech?</h2>
-            <p>Ngày nay, bạn có thể làm mọi thứ từ việc phát tán nội dung trên quy mô cực lớn đến quản lý tương tác của khách hàng hay xem “bản đồ nhiệt” những hành động của visitors trên website của bạn (rê chuột, giữ chuột, click chuột, thời gian ở lại trang web, trang con visitor mở ra,…). Tất cả các công cụ này đều có một mục đích: Nó cho phép chúng ta marketing rộng rãi và hiệu quả hơn cũng như đánh giá, phân tích dữ liệu khách hàng một cách thực tế về hiệu suất. Đó chắc chắn là là một bước tiến lớn so với Marketing truyền thống thời xưa, khi chúng ta không có nhiều cách để tiếp cận khách hàng và đặc biệt chúng ta không có khả năng thu thập các chỉ số tương tác rất kỳ diệu ngày hôm nay. Tuy nhiên, một vấn đề lớn là các nền tảng MarTech đang phát triển cực kỳ mạnh mẽ, tốc độ gia tăng về cả số lượng và tính năng của các công cụ MarTech là cực lớn khiến chúng ta quên mất lý do sử dụng chúng ngay từ ban đầu. Ví dụ, lấy mindset hoàn toàn hợp lý này mà một bộ phận Marketing có thể đưa ra:</p>
-<p>“Chúng tôi đã nhận được 6.400 lượt thích trên bài đăng trên Twitter vào Thứ Bảy, 3.500 vào Chủ Nhật, 7.000 vào Thứ Hai và 7.350 trong hôm nay. Nhìn chung, chúng tôi đang có xu hướng nhận được nhiều tương tác hơn – một dấu hiệu tuyệt vời.“</p>
-<p>“Chúng tôi gặp sự cố liên tục mà chúng tôi thường thấy trong nền tảng trải nghiệm khách hàng của mình, nhưng chúng tôi đã phát triển một quy trình hiệu quả để giải quyết vấn đề đó. Chúng ta có thể tạo ra những thủ tục nào khác?”</p>
-<p>“Khá thú vị – chúng tôi có thể gửi khuyến mại qua email này tới 100.000 người đăng ký trong danh sách email chỉ với một cú nhấp chuột.”</p>
-<p>Khi bạn hiểu điều gì đang khiến hoạt động marketing hiệu quả, bạn có thể tăng gấp đôi nguồn lực cho những hoạt động đó hoặc điều chỉnh những gì cần khắc phục. Cuối cùng, bạn sẽ tạo ra một chiếc máy thúc đẩy doanh số và tạo ra một trải nghiệm khách hàng tuyệt vời và khiến họ hài lòng.</p>
+            <p>Một doanh nghiệp không sử dụng AI có thể sẽ thấy mình có các quy trình tiếp thị kém hiệu quả hơn so với một doanh nghiệp khác đang sử dụng tất cả các công cụ quảng cáo tích hợp AI mới nhất. Bên cạnh đó, một doanh nghiệp cũng có thể phải đối mặt với các mối đe dọa lớn hơn. Khi các đối thủ cạnh tranh triển khai AI để giảm chi phí và tăng tốc độ và hiệu quả trên mọi khía cạnh kinh doanh của họ, một công ty chưa triển khai AI sẽ phải vật lộn để theo kịp giá cả, tốc độ và hiệu quả của đối thủ.</p>
+            <h3 class="mb-3 mt-5">3.Hiểu xu hướng mới nhất</h2>
+            <p>Dù lớn hay nhỏ, mọi doanh nghiệp đều có thể bắt đầu thử nghiệm trí tuệ nhân tạo và gặt hái nhiều lợi ích từ việc sử dụng nó. Điều quan trọng cần nhận ra là AI không cần ngân sách lớn hoặc thậm chí là cam kết thời gian lớn để thực hiện.</p>
+            <p>Đối với các doanh nghiệp vừa và nhỏ, AI có thể dễ dàng được tích hợp với việc sử dụng phần mềm hoặc ứng dụng của bên thứ ba. Mặc dù chúng tồn tại cho mọi khía cạnh của hoạt động kinh doanh, tiếp thị và bán hàng chắc chắn xứng đáng là trọng tâm chính của công ty – dù có ngân sách eo hẹp để thực hiện.</p>
+             <h2 class="mb-3 mt-5">4. Doanh nghiệp có nên đầu tư vào MarTech không?</h2>
+            <p class="mb-5">
+            <img src="images/12404_MarTech.jpg" alt="" class="img-fluid">
+            </p>
+            <p>Một doanh nghiệp chọn chuẩn bị cho việc tiếp tục sử dụng AI sẽ cần bắt đầu nghiên cứu những cải tiến và xu hướng mới nhất để luôn biết, nhưng hơn thế nữa, nó cũng sẽ cần bắt đầu xem xét việc triển khai AI có thể giúp tăng tốc như thế nào lên các quy trình riêng của mình, chi phí thấp hơn và tối ưu hóa khối lượng công việc của nó.</p>
+<p>Khi làm như vậy, doanh nghiệp sẽ có thể bắt đầu triển khai AI ở quy mô nhỏ nhất để có thể bắt đầu thử nghiệm các khả năng mạnh mẽ của AI và giành được chỗ đứng trước các đối thủ cạnh tranh. Quá trình này nên bắt đầu ngay hôm nay, bắt đầu bằng nghiên cứu về các ứng dụng tiếp thị và bán hàng sử dụng AI.</p>
+<p>Hiệu quả của những nỗ lực này chắc chắn sẽ được hiện thực hóa trong tương lai gần, và hơn thế nữa, khi AI tiếp tục tiến lên.</p>
+<p>Nhìn chung, khi thị trường ngày càng trở nên số hóa, nhu cầu khách hàng ngày càng trở nên đa dạng, và khó nắm bắt hơn bao giờ hết, thì việc vận dụng nền tảng MarTech vào môi trường kinh doanh sẽ giúp doanh nghiệp tiếp cận tốt hơn với nguồn dữ liệu Big Data vô tận, góp phần tạo ra lợi thế cạnh tranh khác biệt so với đối thủ.</p>
+<p>Có một điều chắc chắn rằng MarTech đã và đang trở thành một định hướng được đa số doanh nghiệp trên thị trường hướng đến, và đã đến lúc những nhà quản trị, những người làm truyền thông cần trang bị cho bản thân kiến thức sâu rộng về MarTech để có thể nắm bắt và vận dụng tối đa những ưu điểm vượt trội mà MarTech đem lại.</p>
+<p><i>Nguồn: martechtoday.vn</i></p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">MarTech</a>
@@ -166,9 +167,9 @@
             <div class="sidebar-box ftco-animate">
               <h3>Recent Blog</h3>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(images/1.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+    <h3 class="heading"><a href="Marketing-Automation-2020.html">Marketing Automation năm 2020</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="icon-calendar"></span> Nov. 14, 2019</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
@@ -179,7 +180,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                  <h3 class="heading"><a href="martech-la-gi.html">MarTech là gì? What is MarTech?</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="icon-calendar"></span> Nov. 14, 2019</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
