--- a/Data-Driven-Marketing.html
+++ b/Data-Driven-Marketing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - MarTech là gì?</title>
+    <title>MarTech Zone Blog - Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -43,13 +43,13 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/image_2.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/Data-Driven-Marketing.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">MarTech là gì | What is MarTech</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech là gì | What is MarTech<i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -59,31 +59,47 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
+            <p>Kinh doanh là một lĩnh vực có tính cạnh tranh cao đòi hỏi người kinh doanh phải thường xuyên cập nhật xu hướng và thị hiếu của người tiêu dùng. Cùng với sự phát triển của digital marketing, thuật ngữ Data driven cũng trở nên phổ biến và được các doanh nghiệp ứng dụng trong hoạch định chiến lược. Vậy data driven là gì và tầm quan trọng của data driven như thế nào trong chiến lược kinh doanh?</p>
+            <h2 class="mb-3 mt-5">Data driven là gì?</h2>
 
-<p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
+<p>Data driven là một thuật ngữ tiếng Anh, được dịch nghĩa là điều khiển bằng dữ liệu, thuật ngữ này thường được dùng trong lĩnh vực kinh doanh và tiếp thị. Data driven tức là phương thức kinh doanh dựa trên cơ sở dữ liệu thu thập và phân tích được. Có thể nói, trong thời đại công nghệ 4.0 với sự phát triển của digital marketing, phân tích dữ liệu giờ đây đã thành một phần cơ bản của chiến lược quảng cáo và kinh doanh.</p>
+<p>Các dữ liệu này bao gồm thông tin, tương tác và hành vi mua hàng của khách hàng, việc phân tích dữ liệu sẽ dự đoán được hành vi mua sắm của khách hàng trong tương lai.Data driven bao gồm sử dụng dữ liệu sẵn có, thu thập dữ liệu, phân tích, xử lý dữ liệu và áp dụng dữ liệu đó cho chiến lược quảng cáo, tiếp thị và kinh doanh của bạn.</p>
 
-<h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
+<h2 class="mb-3 mt-5">Data driven được hình thành và phát triển như thế nào?</h2>
+<p><b>Sự xuất hiện của phần mềm quản lý khách hàng (CRM)</b></p>
 
-<p>Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
-<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+<p>Data driven xuất phát từ việc phát minh ra phần mềm quản lý quan hệ khách hàng (CRM) cho phép các nhà tiếp thị theo dõi khách hàng cá nhân bao gồm tên và thông tin liên hệ.</p>
+<p>CRM cho phép gửi thư trực tiếp đến khách hàng và do đó nhà tiếp thị có thể thực hiện các chiến dịch tiếp thị trực tiếp bằng cách gửi các loại tin nhắn khác nhau đến từng phân khúc khách hàng khác nhau.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/Data-Driven-Marketing.jpg" alt="" class="img-fluid">
             </p>
-            <h3 class="mb-3 mt-5">Chúng ta cùng tìm hiểu sâu thêm về MarTech</h3>
-            <p>Bạn có sử dụng MarTech không? Hầu như chắc chắn câu trả lời sẽ là có. Nếu bạn đã thực hiện bất kỳ phần nào trong hoạt động marketing của mình trong thế giới kỹ thuật số hiện nay, thì bạn là một phần của MarTech. Có thể là bạn đang sử dụng:</p>
-<p>Email marketing</p>
-<p>Customer relationship management (CRM) platforms</p>
-<p>Services to gauge customer satisfaction</p>
-<p>Website analytics</p>
-<p>Search or social media advertising</p>
-<p>Danh sách còn rất dài…</p>
-            <h2 class="mb-3 mt-5">Vậy, tại sao bạn sử dụng MarTech?</h2>
-            <p>Ngày nay, bạn có thể làm mọi thứ từ việc phát tán nội dung trên quy mô cực lớn đến quản lý tương tác của khách hàng hay xem “bản đồ nhiệt” những hành động của visitors trên website của bạn (rê chuột, giữ chuột, click chuột, thời gian ở lại trang web, trang con visitor mở ra,…). Tất cả các công cụ này đều có một mục đích: Nó cho phép chúng ta marketing rộng rãi và hiệu quả hơn cũng như đánh giá, phân tích dữ liệu khách hàng một cách thực tế về hiệu suất. Đó chắc chắn là là một bước tiến lớn so với Marketing truyền thống thời xưa, khi chúng ta không có nhiều cách để tiếp cận khách hàng và đặc biệt chúng ta không có khả năng thu thập các chỉ số tương tác rất kỳ diệu ngày hôm nay. Tuy nhiên, một vấn đề lớn là các nền tảng MarTech đang phát triển cực kỳ mạnh mẽ, tốc độ gia tăng về cả số lượng và tính năng của các công cụ MarTech là cực lớn khiến chúng ta quên mất lý do sử dụng chúng ngay từ ban đầu. Ví dụ, lấy mindset hoàn toàn hợp lý này mà một bộ phận Marketing có thể đưa ra:</p>
-<p>“Chúng tôi đã nhận được 6.400 lượt thích trên bài đăng trên Twitter vào Thứ Bảy, 3.500 vào Chủ Nhật, 7.000 vào Thứ Hai và 7.350 trong hôm nay. Nhìn chung, chúng tôi đang có xu hướng nhận được nhiều tương tác hơn – một dấu hiệu tuyệt vời.“</p>
-<p>“Chúng tôi gặp sự cố liên tục mà chúng tôi thường thấy trong nền tảng trải nghiệm khách hàng của mình, nhưng chúng tôi đã phát triển một quy trình hiệu quả để giải quyết vấn đề đó. Chúng ta có thể tạo ra những thủ tục nào khác?”</p>
-<p>“Khá thú vị – chúng tôi có thể gửi khuyến mại qua email này tới 100.000 người đăng ký trong danh sách email chỉ với một cú nhấp chuột.”</p>
-<p>Khi bạn hiểu điều gì đang khiến hoạt động marketing hiệu quả, bạn có thể tăng gấp đôi nguồn lực cho những hoạt động đó hoặc điều chỉnh những gì cần khắc phục. Cuối cùng, bạn sẽ tạo ra một chiếc máy thúc đẩy doanh số và tạo ra một trải nghiệm khách hàng tuyệt vời và khiến họ hài lòng.</p>
+<p><b>Thời đại tự động hóa tiếp thị thông qua đám mây</b></p>
+<p>CRM đã đạt được một bước tiến mới trong thời đại tiếp thị kỹ thuật số với sự đổi mới của Salesforce khi kết nối nền tảng này với đám mây.</p>
+<p>Tiếp thị dựa trên dữ liệu kỹ thuật số ra đời khi CRM khai sinh ra phần mềm tự động hóa tiếp thị. Hồ sơ tiếp thị cá nhân được xây dựng dựa trên việc theo dõi tương tác của khách hàng trên trang web và email. Từ đó, các email được gửi tự động dựa trên kết quả chấm điểm khách hàng tiềm năng trên từng phân khúc.</p>
+<p><b>Thời đại của marketing dựa trên nền tảng quản lý dữ liệu (data-driven)</b></p>
+<p>Khi các nhà tiếp thị bắt đầu tiến hành phân khúc khách hàng bằng cách sử dụng dữ liệu tiếp thị, họ gặp phải một vấn đề mới xung quanh lượng dữ liệu về người dùng được theo dõi đang được tích lũy.</p>
+<p>Khách hàng giờ đây không chỉ tiếp cận và tương tác với các chương trình tiếp thị thông qua website và email của công ty mà còn tiếp cận thông qua các phương tiện truyền thông khác nơi mà nhà tiếp thị đang đặt quảng cáo, gọi là quảng cáo thuật toán. Các giải pháp ví dụ như Krux và Neustar đã ra đời để giúp các nhà tiếp thị tổng hợp dữ liệu theo cách dễ quản lý hơn và tạo ra những hiểu biết về thị trường, khách hàng nhằm hoạch định các chính sách và chiến lược tiếp thị mới.</p>
+<p>Từ đó, bắt đầu thời đại của nền tảng quản lý dữ liệu và data-driven.</p>
+            <h2 class="mb-3 mt-5">Tầm quan trọng của data driven trong xây dựng chiến lược marketing</h2>
+            <p>Cả doanh nghiệp và người tiêu dùng đều được hưởng lợi từ việc tiếp cận dữ liệu để tiếp thị. Khi các chiến lược được thực hiện thành công, những lợi ích đó bao gồm:</p>
+
+<li><b>Tiếp thị cá nhân:</b>Nó giúp cho công ty truyền tải đúng thông điệp, đến đúng đối tượng, vào đúng thời điểm. Tiếp thị dựa trên dữ liệu cho phép các thương hiệu tạo ra một chiến dịch tùy chỉnh cho từng khách hàng tiềm năng thông qua sự hiểu biết sâu sắc hơn về hồ sơ và thông tin khách hàng.</li>
+<li><b>Dữ liệu rõ ràng:</b>Với vô số thông tin trong cơ sở dữ liệu của họ, các nhà tiếp thị có thể sàng lọc để xác định thông tin chính xác và hiệu quả nhất về khách hàng và khách hàng tiềm năng. Với cách tiếp cận dựa trên dữ liệu, việc phân tách các nhóm đối tượng mục tiêu mà bạn đang cố gắng tiếp cận sẽ trở nên dễ dàng hơn nhiều.</li>
+<li><b>Trải nghiệm đa kênh:</b>Các nhà tiếp thị có thể tận dụng dữ liệu để mở rộng phạm vi tiếp cận trên nhiều nền tảng. Dữ liệu cũng giúp nhà tiếp thị xác định được những kênh nào nên chạy chương trình quảng cáo thông qua các chiến dịch tiếp thị tự động. Điều đó đảm bảo rằng thông điệp của bạn nhất quán, phù hợp và tiếp cận từng khách hàng ở nơi hoàn hảo và vào thời điểm hoàn hảo nhất.</li>
+<li><b>Trải nghiệm khách hàng tinh tế:</b>Nhiều thương hiệu phổ biến sử dụng tiếp thị dựa trên dữ liệu để nâng cao trải nghiệm khách hàng của họ. Họ thường sẽ phối hợp các cuộc khảo sát sự hài lòng của khách hàng và xác định chính xác các đối tượng khách hàng cụ thể để cải thiện.</li>
+<li><b>Phát triển sản phẩm tốt hơn:</b>Tiếp thị dựa trên dữ liệu giúp tăng khả năng thành công của sản phẩm. Các công ty có thể thiết lập sự hiểu biết tốt hơn về đối tượng mục tiêu của họ, điều này dẫn đến việc phát triển các sản phẩm phù hợp hơn cho thị trường cụ thể đó.</li>
+<h2 class="mb-3 mt-5">Tương lai của tiếp thị đa kênh chính là tự động hóa thu thập và phân tích dữ liệu</h2>
+<p><b>Kỷ nguyên của ngành phân tích dữ liệu lớn (big data)</b></p>
+<p>Tiếp thị đa kênh cần một lượng dữ liệu khổng lồ làm cơ sở cho việc ra quyết định và hoạch định chiến lược. Việc tiếp cận, thu thập và phân tích lượng dữ liệu này dường như nằm ngoài tầm tay của các nhà tiếp thị. Chính vì vậy, họ cần một bên thứ 3 để cung cấp giải pháp tối ưu cho việc xử lý và phân tích dữ liệu này. Tiếp thị đa kênh đã hình thành nên một đế chế về data analytics mạnh mẽ. Bằng chứng rõ ràng nhất chính là việc các ông lớn về công nghệ đã lần lượt thâu tóm các giải pháp phân tích dữ liệu trong năm 2019, như thương vụ Google mua lại Looker analytics với giá 2.6 tỷ USD, và Salesforce mua lại Tableau với giá 15.7 tỷ USD thông qua hoán đổi cổ phần.</p>
+<p><b>Tự động hóa thu thập và phân tích dữ liệu</b></p>
+<p>Phần mềm thu thập dữ liệu tự động thu thập và sàng lọc nội dung, hành vi và hành động của khách hàng để cung cấp cho bạn thông tin chuyên sâu về khách hàng tiềm năng và các xu hướng về thị trường. Nó giúp bạn có hiểu biết tốt hơn về khách hàng, từ đó thiết kế các chiến dịch tiếp thị tốt hơn.</p>
+<p>Analytics cũng có thể giúp bạn thấy được mức độ thành công của các chiến dịch của mình trong thời gian thực. Bạn có thể biết được có bao nhiêu người đang click chuột vào nội dung của bạn, thời gian họ ở lại và kênh nào có nhiều lưu lượng truy cập nhất. Bạn cũng có thể tìm hiểu nhóm khách hàng nào phản hồi chiến dịch của bạn nhiều nhất, giúp bạn khám phá phân khúc khách hàng mà bạn nên tập trung vào.</p>
+<p><b>Tự động hóa tiếp thị</b></p>
+<p>“Tự động hóa tiếp thị phát triển trên nền tảng quản lý quan hệ khách hàng (CRM) và quản lý trải nghiệm khách hàng (CXM) tập trung vào các mô tả, phân khúc, lên kế hoạch, thực hiện và theo dõi các chiến dịch tiếp thị. Tự động hóa tiếp thị tức là quá trình lặp đi lặp lại các nhiệm vụ tiếp thị nêu trên một cách tự động trong suốt chiến dịch tiếp thị.</p>
+<p>Một ví dụ cho tự động hóa tiếp thị chính là việc Doanh nghiệp đã ứng dụng tự động hóa tiếp thị như thế nào trong việc tạo ra tăng trưởng cho doanh nghiệp mình:</p>
+<p>Grab là một ứng dụng gọi xe phổ biến ở Việt Nam, và mặc dù mảng gọi xe công nghệ có sự cạnh tranh rất lớn khi có sự tham gia của các công ty lớn nhỏ như Go-Việt, Be, My Go…nhưng Grab vẫn là ứng dụng hàng đầu nhờ ứng dụng Data Analytics và tự động hóa tiếp thị trong chiến lược kinh doanh của mình. Giải pháp này được cung cấp bởi một startup của Việt Nam có tên là Holistics.</p>
+<p>Qua bài viết này, chúng ta đã tìm hiểu được data driven là gì và xu hướng data driven marketing trong giai đoạn hiện nay. Có thể nói, hình thức quảng cáo hàng loạt trên website và các phương tiện truyền thông đã trở nên bão hòa. Đã đến lúc marketing hướng tới tối ưu hóa trải nghiệm của khách hàng theo lối tiếp thị cá nhân. Đây chính là giải pháp nâng cao hiệu quả  cạnh tranh và tăng trưởng doanh số của các doanh nghiệp trong thời gian tới.</p>
+<p><i>Nguồn: jobpro.vn</i></p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">MarTech</a>
