--- a/Ngan-xep-cong-nghe-MarTech-Stack.html
+++ b/Ngan-xep-cong-nghe-MarTech-Stack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - MarTech là gì?</title>
+    <title>MarTech Zone Blog - MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -35,7 +35,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Trang chủ</a></li>
 	          <li class="nav-item active"><a href="blog.html" class="nav-link">MarTech</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Chia sẻ</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
@@ -43,13 +43,13 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/image_2.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/ngan-xep-stack.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">MarTech là gì | What is MarTech</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech là gì | What is MarTech<i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ?</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ?<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -59,31 +59,44 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
-
-<p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
-
-<h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
-
-<p>Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
-<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
-<p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+            <p class="mb-5">
+              <img src="images/ngan-xep-stack.jpg" alt="" class="img-fluid">
             </p>
-            <h3 class="mb-3 mt-5">Chúng ta cùng tìm hiểu sâu thêm về MarTech</h3>
-            <p>Bạn có sử dụng MarTech không? Hầu như chắc chắn câu trả lời sẽ là có. Nếu bạn đã thực hiện bất kỳ phần nào trong hoạt động marketing của mình trong thế giới kỹ thuật số hiện nay, thì bạn là một phần của MarTech. Có thể là bạn đang sử dụng:</p>
-<p>Email marketing</p>
-<p>Customer relationship management (CRM) platforms</p>
-<p>Services to gauge customer satisfaction</p>
-<p>Website analytics</p>
-<p>Search or social media advertising</p>
-<p>Danh sách còn rất dài…</p>
-            <h2 class="mb-3 mt-5">Vậy, tại sao bạn sử dụng MarTech?</h2>
-            <p>Ngày nay, bạn có thể làm mọi thứ từ việc phát tán nội dung trên quy mô cực lớn đến quản lý tương tác của khách hàng hay xem “bản đồ nhiệt” những hành động của visitors trên website của bạn (rê chuột, giữ chuột, click chuột, thời gian ở lại trang web, trang con visitor mở ra,…). Tất cả các công cụ này đều có một mục đích: Nó cho phép chúng ta marketing rộng rãi và hiệu quả hơn cũng như đánh giá, phân tích dữ liệu khách hàng một cách thực tế về hiệu suất. Đó chắc chắn là là một bước tiến lớn so với Marketing truyền thống thời xưa, khi chúng ta không có nhiều cách để tiếp cận khách hàng và đặc biệt chúng ta không có khả năng thu thập các chỉ số tương tác rất kỳ diệu ngày hôm nay. Tuy nhiên, một vấn đề lớn là các nền tảng MarTech đang phát triển cực kỳ mạnh mẽ, tốc độ gia tăng về cả số lượng và tính năng của các công cụ MarTech là cực lớn khiến chúng ta quên mất lý do sử dụng chúng ngay từ ban đầu. Ví dụ, lấy mindset hoàn toàn hợp lý này mà một bộ phận Marketing có thể đưa ra:</p>
-<p>“Chúng tôi đã nhận được 6.400 lượt thích trên bài đăng trên Twitter vào Thứ Bảy, 3.500 vào Chủ Nhật, 7.000 vào Thứ Hai và 7.350 trong hôm nay. Nhìn chung, chúng tôi đang có xu hướng nhận được nhiều tương tác hơn – một dấu hiệu tuyệt vời.“</p>
-<p>“Chúng tôi gặp sự cố liên tục mà chúng tôi thường thấy trong nền tảng trải nghiệm khách hàng của mình, nhưng chúng tôi đã phát triển một quy trình hiệu quả để giải quyết vấn đề đó. Chúng ta có thể tạo ra những thủ tục nào khác?”</p>
-<p>“Khá thú vị – chúng tôi có thể gửi khuyến mại qua email này tới 100.000 người đăng ký trong danh sách email chỉ với một cú nhấp chuột.”</p>
-<p>Khi bạn hiểu điều gì đang khiến hoạt động marketing hiệu quả, bạn có thể tăng gấp đôi nguồn lực cho những hoạt động đó hoặc điều chỉnh những gì cần khắc phục. Cuối cùng, bạn sẽ tạo ra một chiếc máy thúc đẩy doanh số và tạo ra một trải nghiệm khách hàng tuyệt vời và khiến họ hài lòng.</p>
+            <p>Thuật ngữ 'ngăn xếp' đã được sử dụng trong ngành công nghệ trong nhiều thập kỷ. Từng được sử dụng chủ yếu trong lập trình và phần cứng máy tính, ngăn xếp đã trở nên phổ biến hơn rất nhiều trong việc sử dụng hàng ngày để tiếp thị và nó hoạt động trên cơ sở các công cụ được xây dựng cùng nhau và chạy cùng nhau trong một quy trình 'giống như ngăn xếp'. Các ứng dụng và phần mềm sẽ chạy trên hoặc trên các phần tử khác trong ngăn xếp và nhiều phần tử sẽ phụ thuộc lẫn nhau.</p>
+
+<p>Ngăn xếp MarTech của doanh nghiệp bạn sẽ tập hợp mọi thứ bạn cần để thành công trong hoạt động tiếp thị với công nghệ phù hợp tại chỗ. Các loại ngăn xếp phổ biến mà hầu hết các doanh nghiệp sử dụng được xây dựng bằng sự kết hợp của các công nghệ và phần mềm khác nhau, mặc dù một số người chọn cách phân biệt giữa phần mềm và công nghệ theo những cách sau:</p>
+<p>Phần mềm ngăn xếp là các gói phần mềm cần thiết cho phần phụ trợ của một trang web hoạt động thành công. Ngăn xếp phần mềm có thể vươn xa và mở rộng từ các yếu tố như hệ điều hành đến các ứng dụng cụ thể được chọn để hợp lý hóa các quy trình và nâng cao kết quả.</p>
+<p>Các ngăn xếp công nghệ thường phức tạp hơn và dựa trên cơ sở hạ tầng nhiều hơn, được thiết kế để đảm bảo phần phụ trợ của bất kỳ hệ thống máy tính, máy chủ hoặc mạng nhất định nào.
+Công nghệ tiếp thị, hay MarTech, mang ý tưởng về ngăn xếp đến một loại công nghệ và đối tượng mới. Ngăn xếp MarTech của bạn được thiết kế để giúp các nỗ lực tiếp thị của bạn hiệu quả hơn, hiệu quả hơn và phù hợp với doanh nghiệp của bạn.</p>
+<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+<h2 class="mb-3 mt-5">Định nghĩa MarTech Stack</h2>
+            <p>Theo thuật ngữ cơ bản nhất, MarTech Stack của bất kỳ doanh nghiệp nào là một tập hợp các công cụ được chọn để làm cho các hoạt động và quy trình tiếp thị trở nên hiệu quả và hiệu quả hơn. Các công cụ có thể kết hợp nền tảng SaaS, công cụ truyền thông xã hội, hệ thống quản lý nội dung, công cụ phân tích và nhiều loại khác, tùy thuộc vào doanh nghiệp được đề cập.</p>
+<p>Tùy thuộc vào quy mô và nhu cầu của bất kỳ doanh nghiệp cá nhân nào, nền tảng tiếp thị sẽ thay đổi. Nhiều công cụ có thể cần thiết và có thể đưa vào các bộ phận khác nhau nếu cần thiết để đảm bảo hoạt động trơn tru, hiệu quả ở mọi cấp độ của bất kỳ chiến dịch hoặc hợp đồng nhất định nào.</p>
+<p>Một chỉ báo tốt về mức độ quan trọng của công nghệ đối với hoạt động tiếp thị là dự báo của Gartner rằng trong 5 năm tới, các giám đốc tiếp thị sẽ chi tiêu nhiều hơn cho công nghệ so với các giám đốc thông tin. Chỉ một mình cho thấy công nghệ đã trở nên quan trọng như thế nào đối với tiếp thị và cách mỗi doanh nghiệp cần đánh giá nhu cầu của chính họ để tạo ra ngăn xếp tối ưu của họ. Đây là một lĩnh vực mà không có giải pháp phù hợp cho tất cả; các bộ phận tiếp thị cần phải xem xét các yêu cầu, khách hàng và chiến dịch cụ thể của riêng họ và xây dựng hệ thống của họ dựa trên điều này.</p>
+<p>Lấy hội thảo trên web làm ví dụ. Hội thảo trên web ít nhất sẽ yêu cầu trang đích để mọi người đăng ký, nội dung ở dạng văn bản bán hàng và tiếp thị, chưa kể đến việc thiết lập và chính hội thảo trên web. Sau đó, nó sẽ cần được quảng bá qua email và tiếp thị truyền thông xã hội cũng như nhắm mục tiêu khách hàng và khách hàng tiềm năng thông qua nhóm bán hàng sử dụng giải pháp CRM. Một ví dụ này cho thấy mức độ đi vào từng yếu tố của chiến dịch tiếp thị và cách ngăn xếp MarTech được tích hợp như thế nào khi các bộ phận khác nhau phối hợp hoạt động - thậm chí quảng bá hội thảo trên web liên quan đến một số công nghệ và đây chỉ là một yếu tố của tiếp thị lớn hơn và / hoặc chiến dịch phát triển kinh doanh.</p>
+<h2 class="mb-3 mt-5">Xây dựng MarTech Stack của bạn</h2>
+<p>Như đã đề cập, mỗi ngăn xếp MarTech của doanh nghiệp là duy nhất và cụ thể nhưng có một số yếu tố chính mà hầu hết sẽ kết hợp cùng với các công cụ khác từ các phòng ban tích hợp. Dưới đây là một số loại công cụ và công nghệ chính mà bạn mong đợi trong một ngăn xếp MarTech điển hình.</p>
+<h3 class="mb-3 mt-5">Hệ thống quản lý nội dung (CMS)</h3>
+<p>Một nền tảng cần thiết để chạy trang web, blog của bạn hoặc sản phẩm dựa trên web khác để tiếp thị kinh doanh trực tuyến. CMS phổ biến vì chúng cho phép các nhóm và nhân viên phi kỹ thuật đăng nhập vào trang web và thực hiện các thay đổi khi cần thiết, tải lên nội dung, v.v.</p>
+<h3 class="mb-3 mt-5">Công cụ quảng cáo</h3>
+<p>Các công cụ quảng cáo thường kết hợp các tùy chọn quảng cáo trả tiền nhưng cũng có khả năng theo dõi và đo lường. Các công cụ như Google AdWords, Bing Ads và Facebook Power Editor là ví dụ về các công cụ quảng cáo phổ biến mà bạn có thể chọn để tích hợp vào công nghệ tiếp thị của mình.</p>
+<h3 class="mb-3 mt-5">Công cụ chuyển đổi</h3>
+<p>Chuyển đổi lưu lượng truy cập thành khách hàng tiềm năng và khách hàng tiềm năng về cơ bản là điểm cốt lõi của bất kỳ chiến dịch tiếp thị nào. Các công cụ như Crazy Egg theo dõi hành vi trên trang web để bạn có thể chọn ra các khách hàng tiềm năng chuyển đổi và bỏ mua quá cũng rất phổ biến.</p>
+<h3 class="mb-3 mt-5">Thư điện tử quảng cáo</h3>
+<p>Tiếp thị qua email là xương sống của hầu hết tất cả các chiến dịch tiếp thị và các công nghệ phù hợp có thể giúp nó thành công hơn nữa, tăng tốc các giai đoạn thử nghiệm và theo dõi kết quả hiệu quả hơn. Một số tổ chức sẽ chọn một công cụ tiếp thị qua email đơn giản giúp thiết kế và có một số yếu tố phân tích trong khi những tổ chức khác yêu cầu thứ gì đó mạnh mẽ hơn nhiều như Infusionsoft.</p>
+ <h3 class="mb-3 mt-5">Truyền thông xã hội</h3>
+<p>Tất cả các doanh nghiệp sẽ thiết lập các kênh truyền thông xã hội đã chọn và có thể sử dụng các công cụ cụ thể, như Hootsuite và Buffer phổ biến, để tự động hóa chúng. Điều này cũng tạo thành một phần của ngăn xếp MarTech. Cho dù đó chỉ đơn giản là một nền tảng để lên lịch và tự động hóa, một nền tảng mối quan hệ để thúc đẩy tương tác hay một công cụ chuyên sâu để phân tích và đo lường hiệu suất kênh, đều có những công cụ hiệu quả cho tất cả các khía cạnh của mạng xã hội.</p>           
+<h3 class="mb-3 mt-5">Dịch vụ khách hàng</h3>
+<p>Dẫn đầu từ mạng xã hội là nhu cầu về các công cụ tập trung vào dịch vụ khách hàng. Trải nghiệm khách hàng nên là trọng tâm cốt lõi của bất kỳ chiến dịch tiếp thị nào và các kênh và phương pháp được sử dụng để hình thành trải nghiệm này sẽ bao gồm các phương pháp tiếp thị ở trên như phương tiện truyền thông xã hội, tiếp thị qua email và hơn thế nữa. Dịch vụ khách hàng đã trở nên tập trung rất nhiều vào phương tiện truyền thông xã hội vì khách hàng bình thường hiện mong đợi các thương hiệu sử dụng các kênh xã hội của họ theo cách đó cho dù họ là ngân hàng trên phố cao hay nhà bán lẻ ngách.</p>  
+<h3 class="mb-3 mt-5">Quản trị quan hệ khách hàng</h3>
+<p>Doanh nghiệp càng tận dụng nhiều kênh tiếp thị thì việc theo dõi và quản lý dữ liệu càng trở nên quan trọng hơn. Hệ thống quản lý quan hệ khách hàng chất lượng tốt giúp ghi lại và theo dõi tất cả các mối quan hệ khách hàng của bạn trên các nền tảng khác nhau. Một hệ thống CRM tốt là điều cần thiết đối với ngăn xếp của bạn vì nó sẽ đảm bảo bạn có thể giám sát đầy đủ hoạt động trên các nền tảng và ứng dụng khác nhau.</p>  
+<h3 class="mb-3 mt-5">Phần mềm tự động hóa</h3>
+<p>Tự động hóa tiếp thị đã trở nên gần như đồng nghĩa với các chiến dịch và công ty thành công. Các yếu tố bán hàng và tiếp thị có thể hoàn toàn tự động, giúp loại bỏ nhân lực và thời gian lãng phí. Tự động hóa tiếp thị có nhiều quy mô - từ tiếp thị qua email đến các trang đích đáp ứng hoặc từ các công cụ kiểm tra A / B đến phần mềm báo cáo và phân tích.</p>
+<h3 class="mb-3 mt-5">Phân tích trang web</h3>
+<p>Google Analytics và các công cụ tương tự khác là cốt lõi của ngăn xếp của bạn. Tích hợp để xem liệu hầu hết các công cụ khác của bạn có đang hoạt động hay không, các công cụ phân tích theo dõi và đo lường tất cả các hoạt động bán hàng và tiếp thị của bạn để bạn có thể xác định cái nào hiệu quả và cái nào không.</p>
+<h3 class="mb-3 mt-5">Sự cân bằng MarTech</h3>
+<p>Sự cân bằng tốt là chìa khóa cho một ngăn xếp MarTech thành công và đây là điều bạn thường học được theo thời gian với việc thử và sai các công cụ khác nhau. Khi bạn bắt đầu tích hợp các công nghệ và phát triển nền tảng của mình, bạn sẽ thấy thời gian và sức lực của mình có thể được tập trung vào các yếu tố sáng tạo và đổi mới hơn của tiếp thị, với các công cụ hỗ trợ các lựa chọn và quyết định của bạn.</p>
+<p><i>Nguồn: MartechAdvisor.com</i></p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">MarTech</a>
