--- a/Real-time-Marketing.html
+++ b/Real-time-Marketing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - MarTech là gì?</title>
+    <title>MarTech Zone Blog - Real-time Marketing</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -43,13 +43,13 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/image_2.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/2.gif');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">MarTech là gì | What is MarTech</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech là gì | What is MarTech<i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Real-time Marketing</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Real-time Marketing<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -59,31 +59,48 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
-
-<p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
-
-<h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
-
-<p>Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
-<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+            <p>Khách hàng luôn thích sự nhanh nhạy, những phản ứng thật lòng, và dễ bị kích thích để thể hiện ý kiến của mình trước những vấn đề “nóng”. Đó chính là lý do mà real-time marketing đã ra đời, giúp cho các thương hiệu có thể chinh phục trái tim mọi khách hàng.</p>
+<h2 class="mb-3 mt-5">Hiệu quả mà Real-time Marketing mang lại</h2>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/1.png" alt="" class="img-fluid">
             </p>
-            <h3 class="mb-3 mt-5">Chúng ta cùng tìm hiểu sâu thêm về MarTech</h3>
-            <p>Bạn có sử dụng MarTech không? Hầu như chắc chắn câu trả lời sẽ là có. Nếu bạn đã thực hiện bất kỳ phần nào trong hoạt động marketing của mình trong thế giới kỹ thuật số hiện nay, thì bạn là một phần của MarTech. Có thể là bạn đang sử dụng:</p>
-<p>Email marketing</p>
-<p>Customer relationship management (CRM) platforms</p>
-<p>Services to gauge customer satisfaction</p>
-<p>Website analytics</p>
-<p>Search or social media advertising</p>
-<p>Danh sách còn rất dài…</p>
-            <h2 class="mb-3 mt-5">Vậy, tại sao bạn sử dụng MarTech?</h2>
-            <p>Ngày nay, bạn có thể làm mọi thứ từ việc phát tán nội dung trên quy mô cực lớn đến quản lý tương tác của khách hàng hay xem “bản đồ nhiệt” những hành động của visitors trên website của bạn (rê chuột, giữ chuột, click chuột, thời gian ở lại trang web, trang con visitor mở ra,…). Tất cả các công cụ này đều có một mục đích: Nó cho phép chúng ta marketing rộng rãi và hiệu quả hơn cũng như đánh giá, phân tích dữ liệu khách hàng một cách thực tế về hiệu suất. Đó chắc chắn là là một bước tiến lớn so với Marketing truyền thống thời xưa, khi chúng ta không có nhiều cách để tiếp cận khách hàng và đặc biệt chúng ta không có khả năng thu thập các chỉ số tương tác rất kỳ diệu ngày hôm nay. Tuy nhiên, một vấn đề lớn là các nền tảng MarTech đang phát triển cực kỳ mạnh mẽ, tốc độ gia tăng về cả số lượng và tính năng của các công cụ MarTech là cực lớn khiến chúng ta quên mất lý do sử dụng chúng ngay từ ban đầu. Ví dụ, lấy mindset hoàn toàn hợp lý này mà một bộ phận Marketing có thể đưa ra:</p>
-<p>“Chúng tôi đã nhận được 6.400 lượt thích trên bài đăng trên Twitter vào Thứ Bảy, 3.500 vào Chủ Nhật, 7.000 vào Thứ Hai và 7.350 trong hôm nay. Nhìn chung, chúng tôi đang có xu hướng nhận được nhiều tương tác hơn – một dấu hiệu tuyệt vời.“</p>
-<p>“Chúng tôi gặp sự cố liên tục mà chúng tôi thường thấy trong nền tảng trải nghiệm khách hàng của mình, nhưng chúng tôi đã phát triển một quy trình hiệu quả để giải quyết vấn đề đó. Chúng ta có thể tạo ra những thủ tục nào khác?”</p>
-<p>“Khá thú vị – chúng tôi có thể gửi khuyến mại qua email này tới 100.000 người đăng ký trong danh sách email chỉ với một cú nhấp chuột.”</p>
-<p>Khi bạn hiểu điều gì đang khiến hoạt động marketing hiệu quả, bạn có thể tăng gấp đôi nguồn lực cho những hoạt động đó hoặc điều chỉnh những gì cần khắc phục. Cuối cùng, bạn sẽ tạo ra một chiếc máy thúc đẩy doanh số và tạo ra một trải nghiệm khách hàng tuyệt vời và khiến họ hài lòng.</p>
+
+<p>Đầu tiên không thể không nhắc tới chiến lược tuy đơn giản nhưng mang đến tác dụng lan tỏa mà chính người tạo ra cũng phải bất ngờ của hãng bánh nổi tiếng Oreon. Vào thời điểm giải đấu bóng bầu dục Mỹ, Super Bowl, năm 2013 đang diễn ra gay cấn và được nhiều người bàn tán sôi nổi thì Oreon bất ngờ tung một bức ảnh lên Twitter với dòng chữ “You can still drunk in the dark” (Bạn vẫn có thể ghi bàn trong bóng tối). Chỉ sau đó vài giờ bức ảnh đã nhận được hàng ngàn lượt favourites và retweets của những người hâm mộ. Tốc độ lan tỏa trên mạng xã hội khiến thương hiệu của Oreon bỗng dưng “tỏa sáng” chỉ sau một đêm, hầu như khắp nước Mỹ đều biết đến họ.</p>
+<h2 class="mb-3 mt-5">Real-time Marketing là gì?</h2>
+<p>Đừng nghĩ rằng khái niệm Real-time Marketing bắt đầu nổi lên từ VD của Oreo.</p>
+<p>Real-time marketing thực ra đã ra đời từ giữa những năm 1990, thời kỳ đầu của lĩnh vực quản trị quan hệ khách hàng. Nhiều công ty đã chuyển sang các quy trình thỏa mãn nhu cầu khách hàng linh hoạt hơn, từ đó phản ứng ngay lập tức, đưa ra các giải pháp nằm trong hoàn cảnh của những gì đang xảy ra.</p>
+<p class="mb-5">
+              <img src="images/2.gif" alt="" class="img-fluid">
+            </p>
+            <p>Với sự phát triển của Internet tốc độ cao và các trang mạng xã hội bây giờ, những tin tức được truyền tải sau một vài giây – thay vì một vài ngày, và Real-time marketing ngày càng trở nên thông dụng.</p>
+            <p>Khái niệm: Real-time marketing là hoạt động kết nối chiến lược của thương hiệu với những tin tức thời sự hoặc xu hướng nóng hổi, bằng cách truyền tải những thông điệp liên quan với cuộc sống cộng đồng của khách hàng mục tiêu, bạn đang mang đến những nội dung liên quan trực tiếp đến họ và khiến họ muốn chia sẻ.</p>
+            <h2 class="mb-3 mt-5">Tại sao Real-time Marketing hiệu quả?</h2>
+            <p>Tại sao một bức ảnh bánh Oreo trong bóng tối lại mang về 16,000 retweets trong khi các chiến lược được chuẩn bị kỹ càng lại không có được phần trăm tương tác như vậy?</p>
+<p>Đây là vì mọi người nghĩ về các nỗ lực real-time marketing là thật lòng, liên quan và dễ tiếp cận. Khách hàng không thường chủ động tìm những mẫu quảng cáo đã được chuẩn bị từ mấy tuần trước nhằm thuyết phục họ mua hàng của bạn. Thay vào đó, họ thích sự nhanh nhạy, những phản ứng thật lòng, và cũng dễ bị kích thích để thể hiện ý kiến của mình trước những vấn đề “nóng”.</p>
+<p>Không chỉ mang lại tiếng tăm cho bạn, Real-time Marketing còn giúp bạn tăng ROI đáng kể. Bạn cần ít nguồn lực (thời gian, lao động…) hơn để xuất bản các tác phẩm real-time marketing, trong khi đó chúng lại mang lại lượng tương tác lớn hơn.</p>
+            <h2 class="mb-3 mt-5">Công thức cho một chiến dịch Real-time Marketing thành công</h2>
+ <p class="mb-5">
+              <img src="images/3.png" alt="" class="img-fluid">
+            </p>  
+<p><b>Quy trình</b></p> 
+<p>Để phản ứng nhanh, bạn cần có một quy trình làm việc thật trôi chảy, ăn khớp. Các phòng ban và chức năng khác nhau phải có khả năng tích hợp, làm việc với nhau.</p>
+<p>Oreo có một đội gồm các vị trí chiến lược, marketing, và thậm chí là luật pháp làm việc cùng nhau để lưu thông các dòng chảy về thực thi, quyết định và kiểm duyệt.</p>  
+<p><b>Thông tin</b></p> 
+<p>Hãy xây dựng một hệ thống thông tin nhằm theo dõi được những sự kiện đang xảy ra trong xã hội, những chủ đề “hot” đối với khách hàng mục tiêu, cũng như những cách triển khai nội dung phù hợp với họ.</p>  
+   <p><b>Tài năng</b></p> 
+<p>Bạn không cần phải tìm những người thật giỏi, nhưng đội của bạn cũng phải đủ khả năng để nắm bắt đám đông, đưa ra các ý tưởng sáng tạo và thực hiện nó một cách thành công trong thời gian ngắn.</p>
+<p><b>Thời gian</b></p> 
+<p>Real-time marketing yêu cầu bạn phải căn thời gian thật chuẩn: đủ nhanh để thông điệp có vẻ ngẫu hứng, khi chủ đề còn “nóng” và thú vị.</p>
+<p class="mb-5">
+              <img src="images/45.jpg" alt="" class="img-fluid">
+            </p>  
+<p><b>May mắn</b></p> 
+<p>Do các chủ đề thời sự cần có được các phản ứng kịp thời, nhiều khi bạn cần may mắn để bắt được đúng chủ đề vừa phù hợp với thương hiệu mình vừa thu hút khách hàng mục tiêu, tìm được ý tưởng đủ nổi bật và kích thích tương tác, và thực hiện nó thành công.</p>
+<p><b>Kết</b></p> 
+<p>Real-time marketing không chỉ là 1 post trên Facebook hay 1 tweet trên Twitter, nó là cả một sự chuyển dịch của lĩnh vực marketing.</p>
+<p>Các marketers không còn dựa dẫm hoàn toàn vào những thủ tục rườm rà, những kế hoạch quá chặt chẽ và được chuẩn bị kỹ lưỡng sau hàng tháng trời làm việc. Việc hiểu biết nằm lòng khách hàng mục tiêu và thế giới của họ cần thiết hơn rất nhiều việc đầu tư cả đống thời gian, nguồn lực vào việc lập kế hoạch.</p>
+<p>Vậy, dù bạn là một công ty tư nhân mới lập, hay một thương hiệu đã gặt hái nhiều thành công, hãy hiện diện trong những thời khắc quan trọng của khách hàng mục tiêu, và cho họ thấy rằng bạn là một phần trong thế giới của họ.</p>
+<p><i>Tổng hợp</i></p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">MarTech</a>
