--- a/SaaS.html
+++ b/SaaS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - MarTech là gì?</title>
+    <title>MarTech Zone Blog - Tổng hợp cái nhìn toàn diện về SaaS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -43,13 +43,13 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/image_2.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/Software-as-a-Service-SaaS-1.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">MarTech là gì | What is MarTech</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech là gì | What is MarTech<i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Tổng hợp cái nhìn toàn diện về SaaS - loại hình phần mềm đang dẫn đầu xu hướng công nghệ toàn cầu</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Tổng hợp cái nhìn toàn diện về SaaS - loại hình phần mềm đang dẫn đầu xu hướng công nghệ toàn cầu<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -59,31 +59,54 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
-
+            <p>Với khái niệm vẫn còn xa lạ với nhiều doanh nghiệp, nhưng xu hướng SaaS và điện toán đám mây đang là hai mô hình dẫn đầu thế giới công nghệ. Hiện nay, nhiều công ty công nghệ của Việt Nam đã  khẳng định tên tuổi và vị trí vững chắc trong lĩnh vực này.</p>
+<p class="mb-5">
+              <img src="images/Software-as-a-Service-SaaS-1.jpg" alt="" class="img-fluid">
+            </p>
 <p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
 
-<h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
+<h2 class="mb-3 mt-5">SaaS là gì?</h2>
 
-<p>Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
-<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+<p>SaaS (Software-as-a-Service) là một trong những dạng điện toán đám mây phổ biến nhất - được định nghĩa là mô hình phân phối dịch vụ ứng dụng phần mềm. Trong đó nhà cung cấp không bán sản phẩm phần mềm mà bán dịch vụ dựa trên phần mềm đó. Nói đơn giản hơn, nhà cung cấp tạo ra và duy trì một phần mềm chạy trên nền web, và khách hàng có thể truy cập từ xa thông qua internet sau khi trả một khoản phí đăng ký định kỳ (hàng tháng, quý, năm).</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/saas-integration-applications-1.png" alt="" class="img-fluid">
             </p>
-            <h3 class="mb-3 mt-5">Chúng ta cùng tìm hiểu sâu thêm về MarTech</h3>
-            <p>Bạn có sử dụng MarTech không? Hầu như chắc chắn câu trả lời sẽ là có. Nếu bạn đã thực hiện bất kỳ phần nào trong hoạt động marketing của mình trong thế giới kỹ thuật số hiện nay, thì bạn là một phần của MarTech. Có thể là bạn đang sử dụng:</p>
-<p>Email marketing</p>
-<p>Customer relationship management (CRM) platforms</p>
-<p>Services to gauge customer satisfaction</p>
-<p>Website analytics</p>
-<p>Search or social media advertising</p>
-<p>Danh sách còn rất dài…</p>
-            <h2 class="mb-3 mt-5">Vậy, tại sao bạn sử dụng MarTech?</h2>
-            <p>Ngày nay, bạn có thể làm mọi thứ từ việc phát tán nội dung trên quy mô cực lớn đến quản lý tương tác của khách hàng hay xem “bản đồ nhiệt” những hành động của visitors trên website của bạn (rê chuột, giữ chuột, click chuột, thời gian ở lại trang web, trang con visitor mở ra,…). Tất cả các công cụ này đều có một mục đích: Nó cho phép chúng ta marketing rộng rãi và hiệu quả hơn cũng như đánh giá, phân tích dữ liệu khách hàng một cách thực tế về hiệu suất. Đó chắc chắn là là một bước tiến lớn so với Marketing truyền thống thời xưa, khi chúng ta không có nhiều cách để tiếp cận khách hàng và đặc biệt chúng ta không có khả năng thu thập các chỉ số tương tác rất kỳ diệu ngày hôm nay. Tuy nhiên, một vấn đề lớn là các nền tảng MarTech đang phát triển cực kỳ mạnh mẽ, tốc độ gia tăng về cả số lượng và tính năng của các công cụ MarTech là cực lớn khiến chúng ta quên mất lý do sử dụng chúng ngay từ ban đầu. Ví dụ, lấy mindset hoàn toàn hợp lý này mà một bộ phận Marketing có thể đưa ra:</p>
-<p>“Chúng tôi đã nhận được 6.400 lượt thích trên bài đăng trên Twitter vào Thứ Bảy, 3.500 vào Chủ Nhật, 7.000 vào Thứ Hai và 7.350 trong hôm nay. Nhìn chung, chúng tôi đang có xu hướng nhận được nhiều tương tác hơn – một dấu hiệu tuyệt vời.“</p>
-<p>“Chúng tôi gặp sự cố liên tục mà chúng tôi thường thấy trong nền tảng trải nghiệm khách hàng của mình, nhưng chúng tôi đã phát triển một quy trình hiệu quả để giải quyết vấn đề đó. Chúng ta có thể tạo ra những thủ tục nào khác?”</p>
-<p>“Khá thú vị – chúng tôi có thể gửi khuyến mại qua email này tới 100.000 người đăng ký trong danh sách email chỉ với một cú nhấp chuột.”</p>
-<p>Khi bạn hiểu điều gì đang khiến hoạt động marketing hiệu quả, bạn có thể tăng gấp đôi nguồn lực cho những hoạt động đó hoặc điều chỉnh những gì cần khắc phục. Cuối cùng, bạn sẽ tạo ra một chiếc máy thúc đẩy doanh số và tạo ra một trải nghiệm khách hàng tuyệt vời và khiến họ hài lòng.</p>
+<p>SaaS được coi là mô hình 4.0 ưu việt hơn so với phần mềm on-premise - dạng phần mềm được doanh nghiệp mua lại thông qua một giấy phép vĩnh viễn. Người dùng có thể mở chạy ứng dụng thông qua trình duyệt mà không cần phải cài đặc. Office365, Gmail, Hotmail, Outlook là những saas tiêu biểu. Hay một vài phần mềm được phát triển rộng rãi bởi nhà cung cấp saas hàng đầu như Amazon web Service, Slack, Oracle, Adobe Creative Cloud, Dropbox, Google, IBM, Microsoft,…</p>
+<h2 class="mb-3 mt-5">Ưu điểm của mô hình SaaS</h2>
+<h3 class="mb-3 mt-5">1. Tiết kiệm chi phí cho doanh nghiệp</h3>
+<p class="mb-5">
+              <img src="images/Fotolia_172854267_XS.jpg" alt="" class="img-fluid">
+            </p>
+            <p>SaaS giúp doanh nghiệp tiết kiệm được cả chi phí tiền mặt, thời gian, nhân lực, chi phí chuyển đổi và chi phí cơ hội.</p>
+            <p>Với mô hình SaaS, bạn không cần cài đặt và chạy các phần mềm trên hệ thống của doanh nghiệp. Điều đó giúp bạn tiết kiệm được một khoản chi phí rất lớn liên quan tới việc mua giấy phép phần mềm, lắp đặt phần cứng cũng như xây dựng hệ cơ sở dữ liệu mới. Trong suốt quá trình sử dụng, mô hình SaaS không đòi hỏi bạn phải trả thêm phí hỗ trợ và bảo trì định kỳ nào.</p>
+            <p>Hầu hết các mô hình SaaS hiện nay đều tập trung vào và bán các dịch vụ phần mềm dưới hai dạng: Freemium - cho phép bạn dùng miễn phí trước rồi trả thêm tiền để sử dụng các tính năng nâng cao, và Premium - bán theo gói dựa trên số lượng tài khoản và thời gian sử dụng. Trong cả hai trường hợp, bạn đều có quyền lựa chọn ngừng đăng ký dịch vụ SaaS bất cứ khi nào bạn muốn, và chi phí cũng ngừng luôn tại thời điểm đó.</p>
+            <p>Thời gian và nhân lực cần thiết để triển khai một phần mềm SaaS cũng tiết kiệm hơn hẳn so với giải pháp on-premise truyền thống. Với đội ngũ hỗ trợ (thường chỉ gồm 1-2 thành viên) của nhà cung cấp SaaS, họ chỉ cần tối đa là 2 ngày để thiết lập tài khoản và training sử dụng phần mềm cho toàn bộ nhân viên trong doanh nghiệp.</p>
+            <p>Mô hình SaaS cũng giúp doanh nghiệp giải bài toán chi phí chuyển đổi khi lắp đặt và áp dụng công nghệ. Phần mềm SaaS được ví như một chiếc xe bus, bạn chỉ cần bỏ ra số tiền vừa phải để được chở đi đến bất cứ nơi nào bạn muốn mà không cần mua chiếc xe mới hay quá lo lắng cho việc chiếc xe bị hỏng hóc giữa đường.</p>
+            <h3 class="mb-3 mt-5">2. Luôn nhận được các tính năng phần mềm tốt nhất</h3>
+            <p>Các nhà cung cấp SaaS luôn thường xuyên tự động cập nhật phần mềm, bao gồm cả việc tối ưu các tính năng cũ và bổ sung thêm các tính năng cao cấp hơn. Bạn không cần một bộ phận IT luôn túc trực để xử lý vấn đề kỹ thuật trong quá trình vận hành phần mềm nữa. Từ việc đảm bảo hệ thống máy chủ chạy tốt, duy trì bảo mật đến fix các bugs phát sinh,... đều được nhà cung cấp chịu trách nhiệm. Đội ngũ tester và IT của họ làm rất tốt phần này, và bạn sẽ luôn được sử dụng dịch vụ tốt nhất từ phía họ.</p>
+<h3 class="mb-3 mt-5">3. Dễ dàng sử dụng ở mọi lúc, mọi nơi</h3>         
+<p>Người dùng dễ dàng truy cập phần mềm từ bất kỳ thiết bị và trình duyệt nào có kết nối Internet vì các nhà cung cấp SaaS triển khai dịch vụ thông qua Internet. Khi doanh nghiệp đăng ký sử dụng phần mềm, bạn được phép tạo thêm tài khoản (với giới hạn số lượng tuỳ theo gói đã mua) cho nhân viên trong doanh nghiệp. Bạn và nhân viên có thể ngồi ở bất cứ đâu, tại bất cứ thời gian nào, thực hiện thao tác đăng nhập đơn giản và sử dụng các tính năng không giới hạn.</p>
+<h3 class="mb-3 mt-5">4. Khả năng tích hợp cực kỳ lớn</h3>        
+<p>Hầu hết các phần mềm SaaS hiện nay đều được tối ưu hệ thống API - giao diện lập trình ứng dụng mở cho phép đồng nhất và trao đổi dữ liệu qua lại giữa các ứng dụng đến từ nhiều bên cung cấp khác nhau. Đó chính là cơ hội để bạn và doanh nghiệp hội nhập nhanh hơn với các công nghệ mới ngay trên chính hệ thống hiện tại của mình.</p>
+<h3 class="mb-3 mt-5">5. Dễ dàng mở rộng quy mô sử dụng</h3>
+<p>Một ưu điểm lớn của dữ liệu đám mây nói chung và SaaS nói riêng là khả năng mở rộng. Bạn dễ dàng tăng gấp đôi, gấp 3,... số lượng tài khoản hoặc tích hợp thêm các phần mềm mới mà không ảnh hưởng tới cơ sở hạ tầng hay cơ sở dữ liệu có sẵn của doanh nghiệp. Điều này đặc biệt quan trọng đối với các doanh nghiệp đang trên đà tăng trưởng nóng hoặc bạn đang có dự định mở rộng quy mô trong tương lai.</p>
+            <h2 class="mb-3 mt-5">Nhược điểm của mô hình SaaS</h2>
+            <p class="mb-5">
+              <img src="images/2020_05_26______83e045b9251dcff5f7b0a0001ec21e40.png" alt="" class="img-fluid">
+            </p>
+            <h3 class="mb-3 mt-5">1. Tính bảo mật hệ thống</h3>
+            <p>Chính bởi tập trung vào sự linh hoạt, gọn nhẹ và dễ dàng triển khai mà mô hình SaaS có một điểm yếu so với giải pháp on-premise - đó là vấn đề bảo mật. Bạn nên kiểm tra lại một lượt về bảo mật trước khi đưa ra bất cứ quyết định triển khai phần mềm SaaS nào.</p>
+<p>Tuy nhiên, khi nền điện toán đám mây 4.0 càng phát triển thì vấn đề này càng bớt lo ngại. Đó là nhờ các nhà cung cấp SaaS chú trọng hơn vào mã hoá dữ liệu và có các điều khoản cam kết bảo mật chặt chẽ hơn trong <i>Cam kết mức độ dịch vụ (SLA).</i></p>
+<h3 class="mb-3 mt-5">2. Yêu cầu bắt buộc về kết nối internet</h3>
+<p>Người dùng cần phải kết nối internet để đăng nhập và sử dụng phần mềm SaaS và có thể bị gián đoạn bất ngờ ở những nơi internet không khả dụng.</p>
+<h3 class="mb-3 mt-5">3. Chưa sẵn sàng với phiên bản mới cập nhật</h3>
+<p>Lợi ích được tự động cập nhật miễn phí phiên bản mới của phần mềm cũng có thể mang lại sự bất tiện. Đó là khi bạn hoặc một số nhân viên trong doanh nghiệp có thể cảm thấy bỡ ngỡ với các thay đổi trong giao diện hay tính năng nâng cao của phần mềm.</p>
+<h2 class="mb-3 mt-5">Tạm kết</h2>
+<p class="mb-5">
+              <img src="images/saas-la-gi-uu-diem.png" alt="" class="img-fluid">
+            </p>
+            <p>Ở bài viết này Martech Zone đã cùng các bạn tìm hiểu tổng quan về mô hình SaaS. Qua đó có thể thấy SaaS là nền tảng quan trọng trong công việc và cuộc sống hội nhập ngày nay. Martech Zone chúc các bạn sớm thành công và giải quyết vấn đề bằng mô hình SaaS hiệu quả!</p>
+            <p><i>Nguồn: Resources.base.vn</i></p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">MarTech</a>
