--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
+   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/xu-huong-martech.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -125,7 +125,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single1.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_3.jpg);"></a>
+   								<a href="blog-single1.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/2.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -146,7 +146,7 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_4.jpg);"></a>
+   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/1.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
@@ -295,7 +295,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="logo"><a href="#">MarTech<span>Zone</span>.</a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>"Technology must become part of marketing's DNA" - Scott Brinke</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -336,7 +336,7 @@
               <ul class="list-unstyled">
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Trang chủ</a></li>
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>MarTech</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Chia sẻ</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Team</a></li>
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Liên hệ</a></li>
               </ul>
             </div>
