--- a/Email-SMS.html
+++ b/Email-SMS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - MarTech là gì?</title>
+    <title>MarTech Zone Blog - Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -35,7 +35,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Trang chủ</a></li>
 	          <li class="nav-item active"><a href="blog.html" class="nav-link">MarTech</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Chia sẻ</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
@@ -43,13 +43,13 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/image_2.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/sms-va-email-800x420.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">MarTech là gì | What is MarTech</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech là gì | What is MarTech<i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -59,32 +59,48 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
+            <p>Email và SMS là các công cụ tương tác với người dùng được sử dụng rộng rãi nhất bởi gần như tất cả các doanh nghiệp. Đây là các công cụ không còn mới và có thể coi là đã ổn định về nền tảng nhưng vẫn còn rất nhiều điều hiểu chưa đúng về chúng và cách sử dụng.</p>
 
-<p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
+<p>Ở mỗi một kênh, tương tác khách hàng đều có những điểm khác biệt, có những khách hàng khác nhau với những nhu cầu khác nhau, hành vi khác nhau. Tuy nhiên, trong bài viết này, chúng ta sẽ tập trung nói nhiều đến 2 kênh chính: Email, SMS và cách kết hợp 2 kênh lại với nhau để đem đến trải nghiệm người dùng tốt nhất.</p>
+<p>Trước tiên, có một số câu hỏi mà bạn cần xem xét:</p>
+<li>Tầm nhìn và mục tiêu kinh doanh của bạn là gì (ví dụ: khách hàng tiềm năng, khách hàng trung thành v.v…)?</li>
+<li>Những kênh nào bạn cảm thấy thoải mái và hiệu quả nhất trong việc sử dụng?</li>
+<li>ROI dự kiến ​​của bạn cho mỗi kênh là gì?</li>
+<li>Bạn dự định làm gì với những nhóm đối tượng có tương tác và không tương tác với kênh?</li>
+<p>Rõ ràng, khi nhìn vào những câu hỏi này, nếu trả lời được một cách đầy đủ thì nhiều số chúng ta cũng tự hiểu là cần phải kết hợp cân bằng giữa Email, SMS và việc kết hợp này sẽ cực kỳ dễ dàng.</p>
+<p><i>Mẹo: Tốt nhất, bạn nên tham khảo ý kiến khách hàng trước khi lựa chọn một kênh để giao tiếp với họ.</i></p>
 
-<h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
+<h2 class="mb-3 mt-5">Làm thế nào để chọn được kênh tốt nhất?</h2>
 
-<p>Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
+<p>Để trả lời câu hỏi cốt lõi này, chúng ta cần trả lời câu hỏi: Thời điểm nào là tốt nhất để sử dụng Email, SMS?</p>
 <p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+<h3 class="mb-3 mt-5">Chức năng cơ bản của từng kênh</h3>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/sms-va-email-800x420.jpg" alt="" class="img-fluid">
             </p>
-            <h3 class="mb-3 mt-5">Chúng ta cùng tìm hiểu sâu thêm về MarTech</h3>
-            <p>Bạn có sử dụng MarTech không? Hầu như chắc chắn câu trả lời sẽ là có. Nếu bạn đã thực hiện bất kỳ phần nào trong hoạt động marketing của mình trong thế giới kỹ thuật số hiện nay, thì bạn là một phần của MarTech. Có thể là bạn đang sử dụng:</p>
-<p>Email marketing</p>
-<p>Customer relationship management (CRM) platforms</p>
-<p>Services to gauge customer satisfaction</p>
-<p>Website analytics</p>
-<p>Search or social media advertising</p>
-<p>Danh sách còn rất dài…</p>
-            <h2 class="mb-3 mt-5">Vậy, tại sao bạn sử dụng MarTech?</h2>
-            <p>Ngày nay, bạn có thể làm mọi thứ từ việc phát tán nội dung trên quy mô cực lớn đến quản lý tương tác của khách hàng hay xem “bản đồ nhiệt” những hành động của visitors trên website của bạn (rê chuột, giữ chuột, click chuột, thời gian ở lại trang web, trang con visitor mở ra,…). Tất cả các công cụ này đều có một mục đích: Nó cho phép chúng ta marketing rộng rãi và hiệu quả hơn cũng như đánh giá, phân tích dữ liệu khách hàng một cách thực tế về hiệu suất. Đó chắc chắn là là một bước tiến lớn so với Marketing truyền thống thời xưa, khi chúng ta không có nhiều cách để tiếp cận khách hàng và đặc biệt chúng ta không có khả năng thu thập các chỉ số tương tác rất kỳ diệu ngày hôm nay. Tuy nhiên, một vấn đề lớn là các nền tảng MarTech đang phát triển cực kỳ mạnh mẽ, tốc độ gia tăng về cả số lượng và tính năng của các công cụ MarTech là cực lớn khiến chúng ta quên mất lý do sử dụng chúng ngay từ ban đầu. Ví dụ, lấy mindset hoàn toàn hợp lý này mà một bộ phận Marketing có thể đưa ra:</p>
-<p>“Chúng tôi đã nhận được 6.400 lượt thích trên bài đăng trên Twitter vào Thứ Bảy, 3.500 vào Chủ Nhật, 7.000 vào Thứ Hai và 7.350 trong hôm nay. Nhìn chung, chúng tôi đang có xu hướng nhận được nhiều tương tác hơn – một dấu hiệu tuyệt vời.“</p>
-<p>“Chúng tôi gặp sự cố liên tục mà chúng tôi thường thấy trong nền tảng trải nghiệm khách hàng của mình, nhưng chúng tôi đã phát triển một quy trình hiệu quả để giải quyết vấn đề đó. Chúng ta có thể tạo ra những thủ tục nào khác?”</p>
-<p>“Khá thú vị – chúng tôi có thể gửi khuyến mại qua email này tới 100.000 người đăng ký trong danh sách email chỉ với một cú nhấp chuột.”</p>
-<p>Khi bạn hiểu điều gì đang khiến hoạt động marketing hiệu quả, bạn có thể tăng gấp đôi nguồn lực cho những hoạt động đó hoặc điều chỉnh những gì cần khắc phục. Cuối cùng, bạn sẽ tạo ra một chiếc máy thúc đẩy doanh số và tạo ra một trải nghiệm khách hàng tuyệt vời và khiến họ hài lòng.</p>
-            <div class="tag-widget post-tag-container mb-5 mt-5">
+            <p><b>E-mail</b></p>
+            <li>Cho phép tùy chỉnh nội dung, chèn hình ảnh để kích hoạt cảm xúc người nhận;</li>
+<li>Cho phép sử dụng các CTA mạnh mẽ thúc đẩy hành động;</li>
+<li>Cho phép đặt lịch, theo dõi và thống kê rõ ràng;</li>
+<p><b>SMS</b></p>
+<li>Tốt nhất để cung cấp thông tin, không tập trung cho tiếp thị</li>
+<li>Tiếp cận đúng lúc (Ngay lập tức) (nhưng phải lưu ý thời gian gửi, mũi giờ, thói quen sinh hoạt của người nhận)</li>
+<li>Lưu ý về loại tin nhắn MMS. Chi phí khá cao.</li>
+
+            <h2 class="mb-3 mt-5">Khả năng theo dõi và đo lường của từng kênh</h2>
+            <p>Đa số chúng ta đều dành nhiều thời gian cho việc lập kế hoạch, nhưng điều quan trọng không kém là xem xét, đánh giá cụ thể những gì chúng ta đã làm, đang làm, xem cái gì tốt, cái gì không. Chúng ta cần phải liên tục theo dõi và đo lường để xem những gì hoạt động tốt, những gì không.</p>
+
+<p><b>E-mail</b></p>
+<li>Theo dõi tỷ lệ mở và click</li>
+<li>Gắn thẻ và theo dõi email thông qua một nền tảng phân tích phổ biến nào đó (UTM)</li> 
+<li>Theo dõi kết quả từ chiến dịch email theo loại thiết bị</li>
+<li>Kiểm tra các biến thể khác nhau cho cùng một thông điệp (A/B Testing)</li>
+<li>Đối với email thương mại điện tử, hãy xem lợi nhuận doanh thu dựa trên mỗi nghìn email được gửi đi (Revenue/1000 email)</li>      <p><b>SMS</b></p>
+<li>Sử dụng một mã theo dõi duy nhất dành riêng cho SMS để theo dõi tỷ lệ chuyển đổi;</li>
+<li>Lợi nhuận/doanh thu dựa trên 1000 SMS gửi đi là bao nhiêu;</li> 
+<p>Không có một giải pháp đơn giản nào cho tất cả các khách hàng. Thay vào đó, đó là sự pha trộn giữa nghệ thuật và khoa học để tìm ra sự cân bằng hoàn hảo để đáp ứng các mục tiêu kinh doanh của doanh nghiệp. Thiết lập chiến lược đo lường và giám sát, tính đến các chuyển đổi cụ thể và luôn tôn trọng người dùng của bạn.</p>
+<p><i>Nguồn tham khảo: https://www.martechtoday.vn/</i></p>      
+<div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">MarTech</a>
                 <a href="#" class="tag-cloud-link">Marketing</a>
